--- a/content/posts/2020-10-20-hello-world/index.mdx
+++ b/content/posts/2020-10-20-hello-world/index.mdx
@@ -1,9 +1,9 @@
 ---
-title: Why Narative loves Gatsby
+title: Test Blo
 author: Jalak Vora
-date: 2019-04-27
+date: 2020-10-20
 hero: ./images/narative-gatsby-hero.jpg
-excerpt: This is a love story about Narative and Gatsby
+excerpt: Testin gatsby
 ---
 # And then under the heading YML you can insert any MDX you like
 # like headings, links, code, images, etc
